--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Antic+Didone|Happy+Monkey" rel="stylesheet">    <!--
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500|Happy+Monkey" rel="stylesheet">    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -27,9 +27,8 @@
     </noscript>
     <div id="root"></div>
     <!-- <div class="credits">
-      Dance of the Sugar Plum Fairies de Kevin MacLeod está sujeta a una licencia de Creative Commons Attribution (https://creativecommons.org/licenses/by/4.0/)
-      Fuente: http://incompetech.com/music/royalty-free/index.html?isrc=USUAN1100270
-      Artista: http://incompetech.com/
+      background image: http://www.freepik.com/free-vector/hand-drawn-variety-of-waves-patterns_845329.htm#term=wave pattern&page=1&position=24
+      bird image: https://pixabay.com/en/macaw-ave-jungle-parrot-animal-1817586/
     </div> -->
   </body>
 </html>
